# orthanc-explorer-2

./: .gitignore  AUTHORS  CITATION.cff  CMakeLists.txt  README.md  TODO  release-notes.md
.github/: FUNDING.yml
.github/workflows/: build-and-release.yml  cmake.yml
Plugin/: DefaultConfiguration.json  Helpers.cpp  Helpers.h  OrthancExplorer.js  Plugin.cpp
Resources/: CreateDistPackage.sh  MoveTranslations.py  SyncOrthancFolder.py
Resources/CreateDistPackage/: Dockerfile  build.sh
Resources/Orthanc/: README.txt
Resources/Orthanc/CMake/: AutoGeneratedCode.cmake  Compiler.cmake  DownloadOrthancFramework.cmake  DownloadPackage.cmake  EmbedResources.py  GoogleTestConfiguration.cmake
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h  OrthancPluginException.h  OrthancPluginsExports.cmake
Resources/Orthanc/Sdk-1.11.2/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Sdk-1.9.7/orthanc/: OrthancCPlugin.h
Resources/Orthanc/Toolchains/: LinuxStandardBaseToolchain.cmake  MinGW-W64-Toolchain32.cmake  MinGW-W64-Toolchain64.cmake  MinGWToolchain.cmake
WebApplication/: inbox.html  index.html  package-lock.json  package.json  retrieve-and-view.html  token-landing.html  vite.config.js
WebApplication/src/: App.vue  AppInbox.vue  AppLanding.vue  AppRetrieveAndView.vue  globalConfigurations.js  main-inbox.js  main-landing.js  main-retrieve-and-view.js  main.js  orthancApi.js  router.js
WebApplication/src/assets/css/: _variables.css  common.css  common.scss  customizable.css  defaults-dark.css  defaults-light.css  layout.css  layout.scss  media.scss  nav-side-menu.css
WebApplication/src/components/: AddSeriesModal.vue  AuditLogs.vue  BulkLabelsModal.vue  CardViewControls.vue  CopyToClipboardButton.vue  CreateWorklistModal.vue  FloatingFilterButton.vue  Inbox.vue  InstanceDetails.vue  InstanceItem.vue  InstanceList.vue  InstanceListExtended.vue  JobItem.vue  JobItemDetail.vue  JobItemResources.vue  JobsList.vue  JobsSideList.vue  LabelsEditor.vue  LanguagePicker.vue  MetricsGraph.vue  MobileBottomMenu.vue  MobileFiltersModal.vue  Modal.vue  ModifyModal.vue  NotFound.vue  README.md  RemoteStudyDetails.vue  RemoteStudyItem.vue  RemoteStudyList.vue  ResourceButtonGroup.vue  ResourceDetailText.vue  RetrieveAndView.vue  SeriesDetails.vue  SeriesItem.vue  SeriesList.vue  Settings.vue  SettingsLabels.vue  SettingsMetrics.vue  SettingsPermissions.vue  ShareModal.vue  (+18 more)
WebApplication/src/helpers/: clipboard-helpers.js  date-helpers.js  label-helpers.js  resource-helpers.js  selection-status.js  source-type.js
WebApplication/src/locales/: ar.json  de 2.json  de.json  en.json  es.json  fr.json  hu.json  i18n.js  it.json  ja.json  ka.json  nl-NL.json  pt.json  ro.json  ru.json  si.json  uk-UA.json  uk.json  vi.json  zh.json
WebApplication/src/locales  /: it.json
WebApplication/src/store/: index.js
WebApplication/src/store/modules/: configuration.js  devices.js  i18n.js  jobs.js  labels.js  selection.js  studies.js
scripts/: check-translations.py  nginx-dev.conf  show-missing-translations.py  start-nginx.sh  stop-nginx.sh
tests/: manual-tests.md
tests/stimuli/TEST_1/: 10.dcm  12.dcm
